tests/cases/compiler-development/artifact/errors/diagnostic-match-unreachable-after-wildcard.diagnostic
diagnostic error code=T0001 family=type message="unreachable match arm after wildcard" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-unreachable-after-wildcard.ari" display="tests/cases/match/errors/match-unreachable-after-wildcard.ari" bytes=151
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-unreachable-after-wildcard.ari" line=12 column=5 end_line=12 end_column=6 byte_start=116 byte_end=117 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-unreachable-after-wildcard.ari:12:5\n    |\n 12 |     B => {\n    |     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-unreachable-after-wildcard.ari" line=9 column=5 end_line=9 end_column=6 byte_start=83 byte_end=84 message="wildcard arm makes later arms unreachable"
  Snippet label=1 text="  --> tests/cases/match/errors/match-unreachable-after-wildcard.ari:9:5\n   |\n 9 |     _ => {\n   |     ^"
  Note index=0 location=none message="match arms are tested from top to bottom and '_' covers every remaining value"
  Help index=0 location=none message="move this arm before the wildcard or remove it"
